# MiniCSVReader

./: CMakeLists.txt  CSVReader.hpp  README.md  test.cpp  test.csv
